Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75391

Greek characters copied from a WebEngineView are scrambled

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.12.10, 5.15.1
    • 5.12.3
    • WebEngine
    • None
    • MacOS 10.14
    • macOS
    • 7b5cb517da57f76437872a891c07fffd1779b6a4 (qt/qtwebengine/5.15) 21a49fe1bdfdf78c464a2fad89113d30247f0c34 (qt/qtwebengine/5.12)

      To reproduce, in the markdowneditor example app, paste the following:

      θεοσέβεια

      Copy the characters from the preview area and paste them into the stock macOS Notes app, and they come out as the following mojibake:

      θεοσέβεια

      If you copy the characters from the left side instead, the characters paste correctly.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            qtdae2 Damien Elmes
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes