[macOS] Add utf-8 character set meta tag for HTML clipboard content

This prevents unicode characters from becoming garbled when pasting the
clipboard content into an application that uses the HTML content
instead of the text data.

This mirrors the behavior of Chromium's clipboard adaptation for macOS

Fixes: QTBUG-75391
Change-Id: I033819a2caf3410509e90c9bc38c9830d184149d
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>